Eliminate NOSCRIPT element from TranslateHelper text dump

TranslateHelper uses a sample of the page text to determine the page
language. This patch eliminates content of NOSCRIPT elements from the
text dump, so that non-text contents in NOSCRIPT elements are not passed
to TranslateHelper.

Bug: 813009
Change-Id: Icf1781a69d17538103574bd149cb3d5851852a08
Reviewed-on: https://chromium-review.googlesource.com/924111
Reviewed-by: Rachel Blum <groby@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537557}
Former-commit-id: 797a3802e777fb42a24529261a1af57a8f899e12